[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jihwan-jeong"
version = "0.1.0"
authors = [
  { name="Jihwan Jeong", email="jiihwan.jeong@gmail.com" },
]
description = "XADD package in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jihwan-jeong/xaddpy"
"Bug Tracker" = "https://github.com/jihwan-jeong/xaddpy/issues"