[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xaddpy"
version = "0.1.16"
authors = [
  { name="Jihwan Jeong", email="jiihwan.jeong@gmail.com" },
]
license = {file = "LICENSE"}
keywords  = ["xadd", "xadd python", "symbolic diagram"]
description = "XADD package in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "sympy",
  "numpy",
  "pulp",
  "psutil",
]
[project.urls]
"Homepage" = "https://github.com/jihwan-jeong/xaddpy"
"Bug Tracker" = "https://github.com/jihwan-jeong/xaddpy/issues"